--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -292,7 +292,7 @@
           <li><a href="https://twbangga.moe.edu.tw/animation/84E43C2D-7AA4-F011-BC9A-005056B2D58D">台語動畫</a></li>
           <li><a href="https://guidephy.github.io/taigitest.html">台語拼音聽寫測驗</a></li>
           <li><a href="https://drive.google.com/file/d/1HG22dckl5NvtjpucLwOgSHN7GKGrY0V0/view?usp=sharing">十萬個為什麼學習單</a></li>
-          <li><a href="https://www.facebook.com/114shell/videos/律動時間聖誕老阿伯來囉北風呼呼吹啥人對遮過%EF%B8%8F每到這個充滿魔法的季節最期待的就是跟著音樂一起動起來這週的律動時間小貝殼們唱跳的是充滿在地風味的臺語版聖誕老阿伯-雖/839282335543491/">聖誕歌台語版></a></li>
+          <li><a href="https://www.youtube.com/watch?v=BL_BEcfRZq8">大腦可塑性的秘密</a></li>
           <li><a href="https://www.canva.com/design/DAG4cYujTyM/atpJGDmmU1XRYwRiKrzIew/view?utm_content=DAG4cYujTyM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h65b4e83e18">上課手機使用規定</a></li>
                 
       </ul>
