--- a/energyGame.html
+++ b/energyGame.html
@@ -1,33 +1,4 @@
-這是一個非常好的調整，將「強制教學」改為「功能引導」，把決策權還給玩家；同時將資金調回 $5,000，讓開局的資源分配成為第一個重大考驗（只能蓋少量的電廠，必須精算燃料費）。
 
-我已根據您的要求完成了 **《像素能源：最終決戰版 v19》**。
-
-### 🛠️ v19 版本修正重點
-
-1. **開局資金回調 (Hard Start)**：
-* **初始資金：$8,000 → $5,000**。
-* **影響**：玩家第一回合無法「蓋好蓋滿」。您可能只能蓋 3~4 座燃煤電廠，或者冒險蓋一點點然後保留資金買燃料。這大幅提升了第一年的策略深度。
-
-
-2. **新手引導重製 (Soft Tutorial)**：
-* **非強制性**：不再強迫玩家「點擊這張卡」、「按這個按鈕」。
-* **區域介紹**：
-1. **建設區引導**：高亮顯示卡片區，提示「在此建設電廠，注意成本與效益」。
-2. **市場區引導**：高亮顯示分頁按鈕，提示「切換至市場購買燃料，價格會波動」。
-3. **推進引導**：高亮顯示下一回合，提示「準備好後進入下一年」。
-
-
-* **操作方式**：點擊螢幕任意處即可跳至下一步，節奏輕快。
-
-
-
----
-
-### 🎮 完整程式碼 (Pixel_Taiwan_Final_v19.html)
-
-請複製以下代碼並存檔。
-
-```html
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -35,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>⚡ 像素能源：決戰台灣 v19</title>
+    <title>⚡ 像素能源：決戰台灣</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&family=Noto+Sans+TC:wght@500;900&display=swap');
 
